--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     header {
       text-align: center;
-      padding: 100px 20px 40px;
+      padding: 80px 20px 20px;
     }
 
     .logo {
@@ -31,10 +31,25 @@
       color: #fff;
     }
 
+    .logo-sub {
+      font-size: 18px;
+      margin-top: 5px;
+      color: #aaa;
+    }
+
+    .tagline {
+      font-size: 16px;
+      margin-top: 40px;
+      max-width: 700px;
+      text-align: center;
+      color: #999;
+      line-height: 1.6;
+    }
+
     .slogan-line {
       font-size: 20px;
       font-style: italic;
-      margin-top: 12px;
+      margin-top: 40px;
       color: #ccc;
       opacity: 1;
       transition: opacity 0.3s ease-in-out;
@@ -52,34 +67,26 @@
       100% { text-shadow: none; transform: translate(0); }
     }
 
-    .tagline {
-      font-size: 16px;
-      margin-top: 40px;
-      max-width: 600px;
-      text-align: center;
-      color: #999;
-      line-height: 1.6;
-    }
-
     .section {
-      max-width: 800px;
+      max-width: 1000px;
       padding: 60px 20px;
       text-align: center;
     }
 
-    .button {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 12px 24px;
-      background-color: #fff;
-      color: #000;
-      font-weight: bold;
-      text-decoration: none;
-      transition: background-color 0.3s;
+    .video-wrapper {
+      position: relative;
+      padding-bottom: 56.25%;
+      height: 0;
+      margin-bottom: 50px;
+      overflow: hidden;
     }
 
-    .button:hover {
-      background-color: #ccc;
+    .video-wrapper iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
 
     footer {
@@ -93,59 +100,31 @@
 <body>
   <header>
     <div class="logo">mōōw</div>
-    <div class="slogan-line" id="moow-slogan">mōōw / just vibes</div>
+    <div class="logo-sub">is the constant</div>
     <div class="tagline">
       Direction. Editing. Street poetry in frame.<br>
       Every project is a new version of mōōw.
     </div>
+    <div class="slogan-line" id="moow-slogan">mōōw / just vibes</div>
   </header>
 
   <div class="section" id="projects">
     <h2>selected cuts</h2>
 
-    <!-- Vimeo 1 -->
-    <div style="position:relative;padding-bottom:56.25%;height:0;margin-bottom:40px;">
-      <iframe src="https://player.vimeo.com/video/1071688838"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen></iframe>
+    <div class="video-wrapper">
+      <iframe src="https://player.vimeo.com/video/1071688838" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
-
-    <!-- Vimeo 2 -->
-    <div style="position:relative;padding-bottom:56.25%;height:0;margin-bottom:40px;">
-      <iframe src="https://player.vimeo.com/video/1071688567"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen></iframe>
+    <div class="video-wrapper">
+      <iframe src="https://player.vimeo.com/video/1071688567" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
-
-    <!-- Vimeo 3 -->
-    <div style="position:relative;padding-bottom:56.25%;height:0;margin-bottom:40px;">
-      <iframe src="https://player.vimeo.com/video/1071690838"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen></iframe>
+    <div class="video-wrapper">
+      <iframe src="https://player.vimeo.com/video/1071690838" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
-
-    <!-- YouTube 1 -->
-    <div style="position:relative;padding-bottom:56.25%;height:0;margin-bottom:40px;">
-      <iframe src="https://www.youtube.com/embed/gVB--vBy7uw"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/gVB--vBy7uw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
-
-    <!-- YouTube 2 -->
-    <div style="position:relative;padding-bottom:56.25%;height:0;margin-bottom:40px;">
-      <iframe src="https://www.youtube.com/embed/_T6Cfy3GGFQ"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/_T6Cfy3GGFQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
 
