--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <h2>selected cuts</h2>
 
     <div class="video-wrapper">
-      <iframe src="https://player.vimeo.com/video/1071688838" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+     <iframe title="vimeo-player" src="https://player.vimeo.com/video/1071688838?h=17ab3c9802" width="640" height="360" frameborder="0"    allowfullscreen></iframe>
     </div>
     <div class="video-wrapper">
       <iframe src="https://player.vimeo.com/video/1071688567" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
