--- a/index.html
+++ b/index.html
@@ -118,9 +118,14 @@
     </div>
   </div>
 
-  <footer>
-    mōōw / we shoot the feeling. no rules. just edits.
-  </footer>
+    <div class="section" style="margin-top: 80px;">
+    <h2>mōōw / we shoot the feeling. no rules. just edits.</h2>
+
+    <div style="margin-top: 40px;">
+      <div style="font-size: 56px; font-weight: bold;">mōōw</div>
+      <div style="color: #aaa; font-size: 18px; margin-top: 5px;">is the constant</div>
+    </div>
+  </div>
 
   <script>
     const slogans = [
