--- a/index.html
+++ b/index.html
@@ -117,7 +117,16 @@
       <iframe src="https://www.youtube.com/embed/_T6Cfy3GGFQ" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
-
+  <div class="section" style="max-width: 800px; margin: 80px auto 60px; text-align: center; line-height: 1.8;">
+    <p style="font-size: 18px; color: #eee;">
+      We don’t follow formats — we fracture them.<br>
+      No safe takes. No templates. Just raw, cinematic instinct.<br>
+      mōōw isn’t a brand. It’s a mood. A moment. A move.
+    </p>
+    <p style="font-size: 16px; color: #888; margin-top: 30px;">
+      You don't get it? Perfect. You're in.
+    </p>
+  </div>
     <div class="section" style="margin-top: 80px;">
     <h2>mōōw / we shoot the feeling. no rules. just edits.</h2>
 
