--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
 
     .logo {
-      font-size: 56px;
+      font-size: 72px;
       font-weight: 900;
       text-transform: lowercase;
     }
@@ -58,7 +58,7 @@
     .section {
       max-width: 1200px;
       width: 100%;
-      padding: 60px 20px;
+      padding: 40px 20px;
       text-align: center;
     }
 
@@ -66,7 +66,7 @@
       position: relative;
       padding-bottom: 56.25%;
       height: 0;
-      margin-bottom: 50px;
+      margin-bottom: 40px;
       overflow: hidden;
       width: 100%;
     }
@@ -117,7 +117,9 @@
       <iframe src="https://www.youtube.com/embed/_T6Cfy3GGFQ" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
-  <div class="section" style="max-width: 800px; margin: 80px auto 60px; text-align: center; line-height: 1.8;">
+
+  <!-- ВАЙБОВЫЙ ХУК -->
+  <div class="section" style="max-width: 800px; margin: 40px auto 30px; text-align: center; line-height: 1.8;">
     <p style="font-size: 18px; color: #eee;">
       We don’t follow formats — we fracture them.<br>
       No safe takes. No templates. Just raw, cinematic instinct.<br>
@@ -127,10 +129,12 @@
       You don't get it? Perfect. You're in.
     </p>
   </div>
-    <div class="section" style="margin-top: 80px;">
+
+  <!-- ФИНАЛ -->
+  <div class="section" style="margin-top: 30px;">
     <h2>mōōw / we shoot the feeling. no rules. just edits.</h2>
 
-    <div style="margin-top: 40px;">
+    <div style="margin-top: 30px;">
       <div style="font-size: 56px; font-weight: bold;">mōōw</div>
       <div style="color: #aaa; font-size: 18px; margin-top: 5px;">is the constant</div>
     </div>
