--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     <div class="video-wrapper">
       <iframe src="https://player.vimeo.com/video/1071688567" frameborder="0" allowfullscreen></iframe>
     </div>
+    <div class="video-wrapper">
     <iframe src="https://player.vimeo.com/video/728098999" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="video-wrapper">
