--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
       <iframe src="https://www.youtube.com/embed/gVB--vBy7uw" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/KG6BbYc8EYI?si" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/_T6Cfy3GGFQ" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
