--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/_T6Cfy3GGFQ" frameborder="0" allowfullscreen></iframe>
     </div>
+    <div class="video-wrapper">
+    <iframe src="https://player.vimeo.com/video/728098999" frameborder="0" allowfullscreen></iframe>
+    </div>
   </div>
 
   <div class="hook">
