--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
       <iframe src="https://www.youtube.com/embed/_T6Cfy3GGFQ" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="video-wrapper">
+    <iframe src="https://player.vimeo.com/video/216709404" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="video-wrapper">
     <iframe src="https://player.vimeo.com/video/728098999" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
