--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/KG6BbYc8EYI?si" frameborder="0" allowfullscreen></iframe>
     </div>
+     <div class="video-wrapper">
+    <iframe src="https://player.vimeo.com/video/552536297" frameborder="0" allowfullscreen></iframe>
+    </div>
     <div class="video-wrapper">
     <iframe src="https://player.vimeo.com/video/728098999" frameborder="0" allowfullscreen></iframe>
     </div>
