--- a/index.html
+++ b/index.html
@@ -193,9 +193,6 @@
       <div class="video-wrapper">
     <iframe src="https://player.vimeo.com/video/216709404" frameborder="0" allowfullscreen></iframe>
     </div>
-     <div class="video-wrapper">
-    <iframe src="https://player.vimeo.com/video/728109264" frameborder="0" allowfullscreen></iframe>
-    </div>
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/gVB--vBy7uw" frameborder="0" allowfullscreen></iframe>
     </div>
@@ -205,8 +202,14 @@
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/KG6BbYc8EYI?si" frameborder="0" allowfullscreen></iframe>
     </div>
+      <div class="video-wrapper">
+    <iframe src="https://player.vimeo.com/video/728109264" frameborder="0" allowfullscreen></iframe>
+    </div>
      <div class="video-wrapper">
     <iframe src="https://player.vimeo.com/video/552536297" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="video-wrapper">
+    <iframe src="" frameborder="https://player.vimeo.com/video/552548503" allowfullscreen></iframe>
     </div>
     <div class="video-wrapper">
     <iframe src="https://player.vimeo.com/video/728098999" frameborder="0" allowfullscreen></iframe>
