--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </div>
   </div>
 
-  <!-- Кнопка открытия модального окна -->
+<!-- Кнопка открытия модального окна -->
 <div style="text-align: center; margin: 40px 0;">
   <button onclick="openModal()" class="contact-button">Contact</button>
 </div>
@@ -225,14 +225,16 @@
 <div id="contactModal" style="display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); backdrop-filter: blur(2px); justify-content: center; align-items: center; animation: fadeInNoise 0.5s ease;">
   <div class="modal-content">
     <h2>let it flow</h2>
-    <form id="contactForm">
-      <input type="text" id="name" placeholder="your name" required>
-      <textarea id="message" placeholder="your message" required></textarea>
+    <form action="https://formspree.io/f/mqapygrr" method="POST" id="contactForm">
+      <input type="text" name="name" placeholder="your name" required>
+      <textarea name="message" placeholder="your message" required></textarea>
+      <input type="hidden" name="_subject" value="New message from mōōw site">
       <br>
       <button type="submit" class="send-button">send</button>
       <br><br>
       <button type="button" onclick="closeModal()" class="close-button">close</button>
     </form>
+    <div id="thankYouMessage" style="display:none; color:#aaa; margin-top:20px; font-size:16px;">Thanks for reaching out.<br>We'll vibe back soon.</div>
   </div>
 </div>
 
@@ -308,21 +310,9 @@
 }
 
 @keyframes fadeInNoise {
-  0% {
-    background: repeating-radial-gradient(circle, #333 0px, #000 2px);
-    opacity: 0;
-    transform: scale(0.8) rotate(-2deg);
-  }
-  50% {
-    background: repeating-radial-gradient(circle, #666 0px, #000 2px);
-    opacity: 0.7;
-    transform: scale(1.05) rotate(1deg);
-  }
-  100% {
-    background: rgba(0,0,0,0.95);
-    opacity: 1;
-    transform: scale(1) rotate(0deg);
-  }
+  0% { background: repeating-radial-gradient(circle, #333 0px, #000 2px); opacity: 0; transform: scale(0.8) rotate(-2deg); }
+  50% { background: repeating-radial-gradient(circle, #666 0px, #000 2px); opacity: 0.7; transform: scale(1.05) rotate(1deg); }
+  100% { background: rgba(0,0,0,0.95); opacity: 1; transform: scale(1) rotate(0deg); }
 }
 
 @keyframes slightMove {
@@ -350,14 +340,27 @@ function openModal() {
 function closeModal() {
   document.getElementById('contactModal').style.display = 'none';
 }
+
+// Скрываем форму и показываем спасибо после отправки
 document.getElementById('contactForm').addEventListener('submit', function(e) {
   e.preventDefault();
-  const name = document.getElementById('name').value.trim();
-  const message = document.getElementById('message').value.trim();
-  const subject = encodeURIComponent('Message from ' + name);
-  const body = encodeURIComponent(message);
-  window.location.href = `mailto:moowisreal.art@gmail.com?subject=${subject}&body=${body}`;
-  closeModal();
+  const form = e.target;
+  const formData = new FormData(form);
+
+  fetch(form.action, {
+    method: form.method,
+    body: formData,
+    headers: { 'Accept': 'application/json' }
+  }).then(response => {
+    if (response.ok) {
+      form.style.display = 'none';
+      document.getElementById('thankYouMessage').style.display = 'block';
+    } else {
+      alert('Oops! Something went wrong...');
+    }
+  }).catch(error => {
+    alert('Oops! There was a problem submitting your form.');
+  });
 });
 
 // Плейсхолдер автосмена
@@ -369,6 +372,7 @@ setInterval(() => {
   nameInput.placeholder = placeholders[phIndex];
 }, 3000);
 </script>
+
 
   <div class="hook">
     We don’t follow formats — we fracture them.<br>
