--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <form action="https://formspree.io/f/mqapygrr" method="POST" id="contactForm">
       <input type="text" name="name" placeholder="your name" required>
       <textarea name="message" placeholder="your message" required></textarea>
-      <input type="hidden" name="_subject" value="New message from mōōw site">
+      <input type="text" id="name" name="name" placeholder="your name" required>
       <br>
       <button type="submit" class="send-button">send</button>
       <br><br>
