--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@ const placeholders = [
   "your name",
   "no name",
   "who cares",
+  "your name",
   "ghost tag",
   "anonymous",
   "secret vibe"
