--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@ setInterval(() => {
     We don’t follow formats — we fracture them.<br>
     No safe takes. No templates. Just raw, cinematic instinct.<br>
     mōōw isn’t a brand. It’s a mood. A moment. A move.<br><br>
-    <span style="color: #777; font-size: 14px;">You don't get it? Perfect. You're in.</span>
+    <span style="color: #777; font-size: 14px;">You don't get it? Perfect. You're in.<br>
+    moowisreal.art@gmail.com</span>
   </div>
 
   <div class="section">
