--- a/index.html
+++ b/index.html
@@ -177,7 +177,190 @@
       Every project is a new version of mōōw.
     </div>
   </header>
+<!-- Кнопка открытия модального окна -->
+<div style="text-align: center; margin: 40px 0;">
+  <button onclick="openModal()" class="contact-button">Contact</button>
+</div>
 
+<!-- Модальное окно -->
+<div id="contactModal" style="display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); backdrop-filter: blur(2px); justify-content: center; align-items: center; animation: fadeInNoise 0.5s ease;">
+  <div class="modal-content">
+    <h2>let it flow</h2>
+    <form action="https://formspree.io/f/mqapygrr" method="POST" id="contactForm">
+      <input type="text" id="name" name="name" placeholder="your name" required>
+      <textarea name="message" placeholder="your message" required></textarea>
+      <br>
+      <button type="submit" class="send-button">send</button>
+      <br><br>
+      <button type="button" onclick="closeModal()" class="close-button">close</button>
+    </form>
+    <div id="thankYouMessage" style="display:none; color:#aaa; margin-top:20px; font-size:16px;">Thanks for reaching out.<br>We'll vibe back soon.</div>
+  </div>
+</div>
+
+<!-- Стили -->
+<style>
+.contact-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background: #fff;
+  color: #000;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  letter-spacing: 1px;
+  transition: 0.3s;
+}
+.contact-button:hover {
+  background: #ddd;
+}
+
+.modal-content {
+  background: #111;
+  border: 1px solid #333;
+  padding: 30px;
+  border-radius: 12px;
+  max-width: 400px;
+  width: 90%;
+  text-align: center;
+  font-family: 'Courier New', monospace;
+  box-shadow: 0 0 20px rgba(255,255,255,0.08);
+  animation: slightMove 3s infinite alternate ease-in-out;
+}
+
+.modal-content h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #fff;
+}
+
+.modal-content input,
+.modal-content textarea {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 12px;
+  background: #222;
+  color: #eee;
+  border: 1px solid #333;
+  font-size: 14px;
+  font-family: 'Courier New', monospace;
+}
+
+.send-button {
+  padding: 12px 20px;
+  background: #fff;
+  color: #000;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+  font-family: 'Courier New', monospace;
+  letter-spacing: 1px;
+  transition: background 0.3s, color 0.3s;
+}
+.send-button:hover {
+  animation: glitch 0.4s infinite alternate;
+}
+
+.close-button {
+  padding: 8px 16px;
+  background: none;
+  color: #666;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+@keyframes fadeInNoise {
+  0% { background: repeating-radial-gradient(circle, #333 0px, #000 2px); opacity: 0; transform: scale(0.8) rotate(-2deg); }
+  50% { background: repeating-radial-gradient(circle, #666 0px, #000 2px); opacity: 0.7; transform: scale(1.05) rotate(1deg); }
+  100% { background: rgba(0,0,0,0.95); opacity: 1; transform: scale(1) rotate(0deg); }
+}
+
+@keyframes slightMove {
+  0% { transform: translate(0, 0); }
+  50% { transform: translate(1px, -1px); }
+  100% { transform: translate(-1px, 1px); }
+}
+
+@keyframes glitch {
+  0% { transform: translate(0); text-shadow: 2px 0 red, -2px 0 blue; }
+  25% { transform: translate(-1px, 1px); text-shadow: -2px 0 red, 2px 0 blue; }
+  50% { transform: translate(1px, -1px); text-shadow: 2px 0 red, -2px 0 blue; }
+  75% { transform: translate(-1px, 1px); text-shadow: -2px 0 red, 2px 0 blue; }
+  100% { transform: translate(0); text-shadow: none; }
+}
+</style>
+
+<!-- Скрипт -->
+<script>
+function openModal() {
+  const modal = document.getElementById('contactModal');
+  modal.style.display = 'flex';
+  modal.style.animation = 'fadeInNoise 0.5s ease';
+}
+
+function closeModal() {
+  const modal = document.getElementById('contactModal');
+  modal.style.animation = 'fadeOutNoise 0.5s ease';
+  setTimeout(() => {
+    modal.style.display = 'none';
+    resetModal();
+  }, 500); // Дождаться завершения анимации
+}
+
+function resetModal() {
+  const form = document.getElementById('contactForm');
+  form.reset();
+  form.style.display = 'block';
+  document.getElementById('thankYouMessage').style.display = 'none';
+}
+
+// Скрываем форму и показываем спасибо после отправки
+document.getElementById('contactForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  const form = e.target;
+  const formData = new FormData(form);
+
+  fetch(form.action, {
+    method: form.method,
+    body: formData,
+    headers: { 'Accept': 'application/json' }
+  }).then(response => {
+    if (response.ok) {
+      form.style.display = 'none';
+      document.getElementById('thankYouMessage').style.display = 'block';
+      
+      // Автоматическое исчезновение через 4 секунды
+      setTimeout(() => {
+        closeModal();
+      }, 4000);
+
+    } else {
+      alert('Oops! Something went wrong...');
+    }
+  }).catch(error => {
+    alert('Oops! There was a problem submitting your form.');
+  });
+});
+
+// Плейсхолдер автосмена
+const nameInput = document.getElementById('name');
+const placeholders = [
+  "your name",
+  "no name",
+  "who cares",
+  "ghost tag",
+  "anonymous",
+  "secret vibe"
+];
+let phIndex = 0;
+
+setInterval(() => {
+  phIndex = (phIndex + 1) % placeholders.length;
+  nameInput.placeholder = placeholders[phIndex];
+}, 2000); // Каждые 2 секунды
+</script>
+  
   <div class="section">
     <h2>selected cuts</h2>
 
