--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class="logo">mōōw</div>
     <div class="slogan-line" id="moow-slogan">mōōw / just vibes</div>
     <div class="tagline">
-      <br>Direction. Editing. Street poetry in frame.<br>
+      Direction. Editing. Street poetry in frame.<br>
       Every project is a new version of mōōw.
     </div>
   </header>
